--- a/style.css
+++ b/style.css
@@ -14,24 +14,22 @@ body {
     min-height: 100vh
 }
 
-.header {
-    padding: 24px 16px 24px 24px
-}
 
 .grid-container{ /*使用grid*/
+    padding: 24px 16px 24px 24px;
     display: grid;
     grid-template-columns: 60px  554px auto;
     float: left;
-    margin-left: 8px;
-    padding: 8px 4px;
+    margin: 8px auto 45px 12px;
     font-size: 14px;
     line-height: 24px;
     color: #505565;
     cursor: pointer
 }
 
-.header .register { /*保留按鈕設定*/
+.register { /*按鈕*/
     float: right;
+    margin-top: -8px;
     padding: 8px 12px;
     font-size: 14px;
     line-height: 24px;
@@ -43,10 +41,9 @@ body {
 }
 
 .logo {
-    padding-top: 85px;
+    padding-top: 89px;
     padding-bottom: 8px
 }
-
 .logo img {
     width: 145px;
     height: 33px;
@@ -56,49 +53,9 @@ body {
 
 .input-form input {
     color: #929292;
+    opacity: 0.5;
     border: none;
     cursor: text;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    background-color: transparent
-}
-
-.input-form input:focus {
-    -webkit-box-shadow: inset 1px 1px 3px 0px #666;
-    -moz-box-shadow: inset 1px 1px 3px 0px #666;
-    box-shadow: inset 1px 1px 3px 0px #666;
-    outline: none
-}
-
-.input-form input[focus="NO"]:focus {
-    box-shadow: none
-}
-
-.input-form input[status="disable"] {
-    border: 1px solid #ddd;
-    color: #ddd;
-    background-color: #f9f6f6
-}
-
-.input-form input[status="blank"]:focus {
-    outline: none;
-    -webkit-box-shadow: inset 1px 1px 3px 0px #929292;
-    -moz-box-shadow: inset 1px 1px 3px 0px #929292;
-    box-shadow: inset 1px 1px 3px 0px #929292;
-    border: #929292 1px solid;
-    -ms-border-radius: 3px;
-    -o-border-radius: 3px;
-    border-radius: 3px;
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    color: #929292;
-    background: none
-}
-
-.input-form .input { /*輸入框框設定*/
-    color: #929292;
-    opacity: 0.5;
     display: block;
     padding: 8px 0px;
     border-bottom: solid 1px rgba(207,207,207,0.2);
@@ -106,23 +63,20 @@ body {
     margin: 32px auto 12px auto;
     font-size: 14px;
     line-height: 24px;
+    background-color: transparent
 }
 
-.input-form .input:focus {
-    background: none;
-    box-shadow: none
+.input-form input:focus {
+    outline: none /*消除選取時的外框*/
 }
 
 .input-form{
-    margin-left: auto;
-    margin-right: auto;
     font-size: 16px;
     line-height: 1.6;
-    color: #666;
     margin-bottom: 20px
 }
 
-.submit-button {
+.submit {
     display: block;
     width: 300px;
     height: 54px;
@@ -133,8 +87,7 @@ body {
     text-align: center;
     cursor: pointer;
     border: none;
-    background-size: 100% 100%;
-    background-position: center center;
+    background-size: 300px 54px;
     background-image: url(btnbg@2x.png)
 }
 
@@ -142,19 +95,18 @@ body {
     display: flex;
     cursor: pointer;
     font-size: 14px;
-    margin: 75px auto 0px auto;/*韓msg box*/
+    margin: 75px auto 0px auto;
     width: 300px;
     color: #505565;
     line-height: 24px;
     text-decoration: underline;
     justify-content: space-between;
 }
-.button-block #regist-account:hover, #forget-password:hover  {
-    color: #1e8cd6
+.button-block #regist-account:hover, #forget-password:hover  { 
+    color: #1e8cd6 /*滑鼠移到合作學校查詢、忘記密碼時改顏色*/
 }
 
-
-.irs-corp-link {
+.link { /*前往企業版*/
     margin-top: 15px;
     height: 24px;
     line-height: 24px;
@@ -162,9 +114,11 @@ body {
     text-align: center;
     color: #505565
 }
-.irs-corp-link a {
+.link a {
     font-weight: bold;
-    color: #1762ad
+    color: #1762ad;
+    cursor: pointer;
+    text-decoration: underline;
 }
 .eat{
     display: block;
